--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,21 +14,31 @@
         {% comment %} {% include google_maps.html %} {% endcomment %}
         <div class="contact-info pt-30">
             <div class="row">
-                {% for contact in site.data.contact %}
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-contact-info contact-color-{{ contact.color }} mt-30 d-flex ">
-                        <div class="contact-info-icon">
-                            <i class="{{ contact.icon }}"></i>
+                <div class="col-lg-8">
+                    <div class="container-fluid">
+                        <div class="row">
+                    {% for contact in site.data.contact %}
+                    <div class="col-lg-6 col-md-6">
+                        <div class="single-contact-info contact-color-{{ contact.color }} mt-30 d-flex ">
+                            <div class="contact-info-icon">
+                                <i class="{{ contact.icon }}"></i>
+                            </div>
+                            <div class="contact-info-content media-body">
+                                <p class="text">
+                                    {{ contact.content | markdownify }}
+                                </p>
+                            </div>
+                        </div> <!-- single contact info -->
+                    </div>
+                    {% endfor %}
                         </div>
-                        <div class="contact-info-content media-body">
-                            <p class="text">
-                                {{ contact.content | markdownify }}
-                            </p>
-                        </div>
-                    </div> <!-- single contact info -->
+                    </div>
                 </div>
-                {% endfor %}
-
+                <div class="col-lg-4 col-md-6">
+                    <div style="max-height:50vh;overflow: auto;">
+                        <a class="twitter-timeline" href="https://twitter.com/KorgeGameEngine?ref_src=twsrc%5Etfw">Tweets by KorgeGameEngine</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                </div>
             </div> <!-- row -->
         </div> <!-- contact info -->
         {% comment %} {% include contact_form.html %} {% endcomment %}
