--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,9 @@
 <!--====== Style CSS ======-->
 <link rel="stylesheet" href="{{ 'assets/css/style.css' | absolute_url }}">
 
+<!--====== Style CSS ======-->
+<link rel="stylesheet" href="{{ 'assets/css/carbon.css' | absolute_url }}">
+
 </head>
 
 <body>
