--- a/_includes/show.html
+++ b/_includes/show.html
@@ -2,6 +2,11 @@
 <section id="action">
     <div class="container-flex">
         <div class="row justify-content-center">
+            <div style="margin:1em;">
+                <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CWYI42JM&placement=korgeorg" id="_carbonads_js"></script>
+            </div>
+        </div> <!-- row -->
+        <div class="row justify-content-center">
             <div class="col-lg-6 col-md-10">
                 <div class="section-title text-center pb-10">
                     <h3 class="title">KorGE In Action</h3>
