--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,14 @@
 <!--====== Style CSS ======-->
 <link rel="stylesheet" href="{{ 'assets/css/carbon.css' | absolute_url }}">
 
+<style>
+*::-webkit-scrollbar-button { display: none; }
+*::-webkit-scrollbar { width: 8px; height: 8px; }
+*::-webkit-scrollbar-track { background: rgba(128, 128, 128, 0.2); border-radius: 10px; }
+*::-webkit-scrollbar-thumb { background-color: rgba(128, 128, 128, 0.3); border-radius: 10px; }
+*::-webkit-scrollbar-thumb:hover { background-color: rgba(128, 128, 128, 0.3); }
+</style>
+
 </head>
 
 <body>
