--- a/_includes/show.html
+++ b/_includes/show.html
@@ -15,7 +15,7 @@
             </div>
         </div> <!-- row -->
         <div class="row justify-content-center">
-		<iframe src="https://show.korge.org/" style="width: 100vw;height: 600px; min-height: 50vh;border:0;padding:0;margin:0;" allowfullscreen referrerpolicy=origin ></iframe>
+		<iframe src="https://show.korge.org/#DungeonScene" style="width: 100vw;height: 600px; min-height: 50vh;border:0;padding:0;margin:0;" allowfullscreen referrerpolicy=origin ></iframe>
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
